# python-project-50

./: .gitignore  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
gendiff/: diff_create.py  parser.py
gendiff/formatters/: __init__.py  json.py  plain.py  stylish.py
gendiff/scripts/: gendiff.py
tests/: test_gendiff.py
tests/fixtures/: file2_nested.yml  result_json.json  result_nested.txt
